--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EnglishDictionary"
+        android:theme="@style/Theme.Material3.Light"
         tools:targetApi="31">
         <activity
             android:name=".activities.RegisterActivity"
